Add Javadoc in YesNoDialogOverlay